--- a/index.html
+++ b/index.html
@@ -1,44 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto Mono', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
+            color: #353535;
+            flex-direction: column;
         }
+
         .container {
-            text-align: center;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px 50px;
         }
+
         h1 {
             margin-bottom: 10px;
         }
+
         p {
             margin-bottom: 20px;
         }
+
         a {
             text-decoration: none;
             color: #3498db;
         }
+
+        .hero-container {
+            justify-content: flex-start;
+            align-items: flex-start;
+            display: flex;
+        }
+
+        .name-heading {
+            /* font-size: 20px; */
+        }
+
+        .name-heading .name {
+            font-weight: bolder;
+            text-transform: uppercase;
+        }
+
+        .name-subheading {
+            /* font-size: 14px; */
+        }
+
+        .row-container {
+            flex-direction: column;
+        }
+
+        .space-bottom {
+            padding-bottom: 10px;
+        }
+
+        .image-container {
+            padding-top: 100px;
+        }
+
+        .image-container img {
+            width: 100px;
+            height: 100px;
+            border-radius: 15px;
+        }
+
+        .introduction {}
+
+        .introduction-tags {
+            padding: 10px 0px;
+            display: flex;
+            flex-direction: row;
+        }
+
+        .introduction-tags .tag {
+            padding: 5px 10px;
+            border: none;
+            border-radius: 7px;
+            margin-right: 10px;
+            color: white;
+            font-size: 12px;
+            background-color: #353535;
+        }
     </style>
 </head>
+
 <body>
+    <div class="container hero-container row-container">
+        <div class="image-container space-bottom"><img src="pbw.png"></div>
+        <div class="name-heading space-bottom">Hi, I'm <span class="name">Sameer Deswal</span></div>
+        <div class="name-subheading space-bottom">Building seamless software solutions, from backend to frontend to
+            infrastructure.
+        </div>
+        <div class="introduction-tags">
+            <div class="tag">Fullstack</div>
+            <div class="tag">AI</div>
+        </div>
+    </div>
     <div class="container">
-        <h1>John Doe</h1>
-        <p>Web Developer & Designer</p>
-        <a href="mailto:john.doe@example.com">Contact Me</a>
+        <!-- <div class="introduction">
+             Senior Tech Lead with over 11 years of experience in designing and implementing mission critical enterprise
+            solutions.
+            Expert knowledge of implementing microservice using Java and Spring Boot.
+            Exceptional skills in collaborating with cross-functional teams, developing and maintaining quality
+            standards, and providing
+            technical guidance and support to drive project success. 
+        </div> -->
+        <!-- <div class="introduction-tags">
+            <div class="tag">Fullstack</div>
+            <div class="tag">AI</div>
+        </div> -->
     </div>
 </body>
-</html></div></html>
+
+</html>
+</div>
+
+</html>
